# port-rag

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build-dev.yml  ci.yml  cleanup-images.yml  release.yml
alembic/: env.py
alembic/versions/: 20260709_0001_initial_documents_chunks.py  20260716_0002_documents_user_id_uuid.py
docs/: ARCHITECTURE.md  ROADMAP.md  STATE.md
docs/v1/designs/: 2026-07-09-v1-rag-ingest-search-mvp.md
docs/v1/plans/: rag-ingest-search-mvp.md
docs/v1/research/: 2026-07-09-v1-parsing-stack-selection.md
scripts/: smoke.py
src/rag/: __init__.py  config.py  main.py  metrics.py
src/rag/db/: __init__.py  models.py  session.py
src/rag/http/: documents.py  responses.py  search.py
src/rag/ingest/: __init__.py  chunker.py  embedder.py  parser.py  pipeline.py  store.py  types.py  worker.py
src/rag/search/: repository.py  service.py  types.py
src/reg/: __init__.py  config.py  main.py
src/reg/db/: __init__.py  base.py  models.py
src/reg/grpc/: __init__.py  servicer.py
src/reg/http/: __init__.py  documents.py  search.py
src/reg/ingest/: store.py  (+6 more)
tests/: test_config.py  test_metrics.py  test_package_name.py  test_sentry.py
tests/db/: test_migration.py  test_models.py  test_uuid_user_id_migration.py
tests/http/: test_documents.py  test_search.py  test_uuidv7_user_id_contract.py
tests/ingest/: test_docling_adapters.py  test_pipeline.py  test_store.py  test_worker.py
tests/search/: conftest.py  test_grpc_servicer.py  test_repository.py  test_service.py
(+3 files in other folders)
